crates/core/tests/ui/typed_query/fail/authored_unknown_column.stderr
error: could not resolve a table or column in typed_sql v1: authored external schema lookup failed: unknown column `widgets.handle` on bound table `service.widgets`; available columns: id, name
          |
        1 | SELECT widgets.handle FROM service.widgets
          |                ^^^^^^
  --> tests/ui/typed_query/fail/authored_unknown_column.rs:14:24
   |
14 |         SELECT widgets.handle FROM service.widgets
   |                        ^^^^^^
